--- a/TrucuFrontEnd/src/app/modules/publication/create-publication/create-publication.component.html
+++ b/TrucuFrontEnd/src/app/modules/publication/create-publication/create-publication.component.html
@@ -1,35 +1,35 @@
 <div class="w-full max-w-lg m-auto mt-32 bg-white p-3 rounded-md" style="margin-top: 12rem !important;">
     <div class="flex flex-wrap -mx-3 mb-6">
-      <h1>Crear publicacion</h1>
+      <h1 class="p-4">Crear publicación</h1>
       <div class="w-full px-3 mb-6 md:mb-0">
-        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+        <h2 class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
           Titulo
-        </label>
+        </h2>
         <input class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" type="text" [(ngModel)]="newPublication.title">
       </div>
       
     </div>
     <div class="flex flex-wrap -mx-3 mb-6">
       <div class="w-full px-3">
-        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+        <h2 class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
           Descripción
-        </label>
+        </h2>
         <textarea class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" [(ngModel)]="newPublication.description"></textarea>
       </div>
     </div>
     <div class="flex flex-wrap -mx-3 mb-6">
       <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-city">
+        <h2 class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-city">
           Valor en ucu coins
-        </label>
+        </h2>
         <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="grid-city" type="number" [(ngModel)]="newPublication.ucuCoinValue">
       </div>
     </div>
     <div class="flex flex-wrap -mx-3 mb-2">
         <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-          <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-city">
+          <h2 class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-city">
             Elegir archivo
-          </label>
+          </h2>
           <input type="file"
                    id="file"
                    (change)="handleFileInput($event.target.files)">
