--- a/TrucuFrontEnd/src/app/modules/publication/publication-filter-home/publication-filter-home.component.css
+++ b/TrucuFrontEnd/src/app/modules/publication/publication-filter-home/publication-filter-home.component.css
@@ -6,13 +6,13 @@
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
     width: 100%;
-    font-family: "Futura";
+    font-family: "FuturaB";
     padding-right: 1rem;
     font-size: 10px !important;
 }
   
   .label-form-design {
-    font-family: "Futura";
+    font-family: "FuturaB";
     color:  rgba(59, 130, 246, var(--tw-bg-opacity));
     font-size: 10px;
   }
@@ -22,7 +22,7 @@
     background: rgba(59, 130, 246, var(--tw-bg-opacity));
     color: white;
     font-size: 15px;
-    font-family: "Futura";
+    font-family: "FuturaB";
     border-radius: 20px 20px 0px 0px;
     padding: 10px;
   }
