--- a/TrucuFrontEnd/src/app/modules/publication/view-publication/view-publication.component.html
+++ b/TrucuFrontEnd/src/app/modules/publication/view-publication/view-publication.component.html
@@ -1,20 +1,23 @@
 <div class="w-1/2 m-auto mt-32 bg-white p-3 rounded-md" style="margin-top:10rem !important;">
   <div class="flex flex-wrap -mx-3 mb-6 w-full">
     <div class="flex flex-row w-full px-3 mb-6 md:mb-0">
-      <label class="block uppercase tracking-wide text-gray-700 text-lg font-bold mb-2 flex-grow" for="grid-first-name">
+      <h2 class="block uppercase tracking-wide text-gray-700 text-lg font-bold mb-2 flex-grow" for="grid-first-name">
         {{wrapper.publication.title}}
-      </label>
+      </h2>
       <img *ngIf="wrapper.publication.accountEmail != user.user.email" class="flex cursor-pointer w-8 justify-end" src="./assets/images/report-icon.png" (click)="toggleShowReport()">
       <img *ngIf="wrapper.publication.accountEmail == user.user.email" class="flex cursor-pointer w-8 justify-end" src="./assets/images/hide-icon.png" (click)="hidePublication()">
     </div>
   </div>
   <div class="flex flex-wrap -mx-3 mb-6">
-    <div class="flex flex-row w-full md:w-1/3 px-3 mb-6 md:mb-0">
-      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-city">
+    <div class="flex flex-row flex-grow w-full md:w-1/3 px-3 mb-6 md:mb-0">
+      <h3 class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-city">
         Precio : {{wrapper.publication.ucuCoinValue}}
-      </label>
+      </h3>
       <img class="w-6 cursor-pointer ml-2" src="assets/images/ucucoin-icon.png">
     </div>
+    <h3 class="justify-end block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 mr-2" for="grid-city">
+      {{wrapper.publication.publicationDate | date: 'dd/MM/yyyy'}}
+    </h3>
   </div>
   <ngb-carousel *ngIf="wrapper.images">
     <ng-template ngbSlide *ngFor="let image of wrapper.images">
@@ -25,9 +28,9 @@
   </ngb-carousel>
   <div class="flex flex-wrap -mx-3 mb-6 mt-4">
     <div class="w-full px-3">
-      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+      <h3 class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
         {{wrapper.publication.description}}
-      </label>
+      </h3>
     </div>
   </div>
   <button type="button" (click)="toggleShowOfferCreation()" *ngIf="wrapper.publication.accountEmail != user.user.email"
@@ -39,18 +42,19 @@
     </svg>
   </button>
   <br/>
-  <h1 *ngIf="this.offersWrapper">Ofertas recibidas para esta publicacion: </h1>
+  <h1 class="mb-8" *ngIf="this.offersWrapper">Ofertas recibidas para esta publicacion: </h1>
+  <h1 *ngIf="wrapper.publication.accountEmail == user.user.email && !this.offersWrapper">No hay ofertas disponibles</h1>
   <div *ngFor="let wrapper of offersWrapper;" class="flex flex-row border-t-2 border-gray-500">
     <div class="flex flex-col flex-grow">
-        <label>Esta oferta incluye las siguientes publicaciones: </label>
+        <h3>Esta oferta incluye las siguientes publicaciones: </h3>
         <div class="flex flex-row" *ngFor="let offeredPublication of wrapper.offeredPublications">
-            <label class="cursor-pointer text-blue-500" [routerLink]="['viewPublication',offeredPublication.idPublication]">{{offeredPublication.title}}</label>
+            <h3 class="cursor-pointer text-blue-500" [routerLink]="['viewPublication',offeredPublication.idPublication]">{{offeredPublication.title}}</h3>
         </div>
     </div>
     <div class="flex justify-end m-2">
-      <label class="text-gray-500" *ngIf="wrapper.offer.status == 'OPEN'">Abierta</label>
-      <label class="text-green-500" *ngIf="wrapper.offer.status == 'SETTLING'">Aceptada</label>
-      <label class="text-blue-500" *ngIf="wrapper.offer.status == 'CHANGED'">Contraoferta</label>
+      <h3 class="text-gray-500" *ngIf="wrapper.offer.status == 'OPEN'">Abierta</h3>
+      <h3 class="text-green-500" *ngIf="wrapper.offer.status == 'SETTLING'">Aceptada</h3>
+      <h3 class="text-blue-500" *ngIf="wrapper.offer.status == 'CHANGED'">Contraoferta</h3>
   </div>
     <div *ngIf="wrapper.offer.status == 'SETTLING'" class="flex flex-col justify-end items-center">
       <button type="button" (click)="ViewAccountData(wrapper.offeredPublications[0].accountEmail)"
